# ClawShield

./: .env.example  .gitignore  AGENTS.md  ClawShield_demo_appendix.tex  DemoREADME.md  README.en.md  README.md  README.zh-CN.md  permission-huang  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
app/: __init__.py  config.py  db.py  lifecycle.py  main.py  settings.py
app/adapters/: file_adapter.py  mock_openclaw.py  tool_registry.py
app/analyzer/: __init__.py  evidence_builder.py  graph_builder.py  risk_analyzer.py  timeline_builder.py
app/api/: error_handlers.py  router.py  routes_demo.py  routes_preaudit.py  routes_runs.py
app/core/: __init__.py  boundary_engine.py  errors.py  exceptions.py  gateway.py  ids.py  logging.py  report_engine.py  trace_builder.py
app/demo/: __init__.py  scenarios.py
app/gateway/: __init__.py  action_intent.py  gateway_manager.py  path_utils.py
app/models/: __init__.py  audit_event.py  audit_report.py  base.py  callback_delivery.py  db_models.py  evidence_edge.py  risk_hit.py  run.py  schemas_rule.py  schemas_task.py  task.py  (+2 more)
clawshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: app.yaml  logging.yaml  opencaw_bridge.yaml  risk_levels.yaml
demo/: README.md
github-pages-docs/: README.md  mkdocs.yml
guardrails/: config.yml
rules/: boundary_rules.yaml
scripts/: backfill_run_conclusions.py  dev_start.py  init_db.py  run_demo.py  seed_demo_data.py  toggle_opencaw_enforce_block.sh  verify_canary_block.py
tests/: conftest.py  test_api.py  test_boundary_engine.py  test_demo_scenarios.py
(+210 files in other folders)
